[20260307][LoiNLT] Update for cart and fix productFranchise search
